--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,8 +25,10 @@ phases:
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
       #- printf '[{"name":"order-service","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
-      - printf 'Welcome to ACS Solutions'
-      - cat imagedefinitions.json
+      - printf 'Welcome to ACS Solutions' $REPOSITORY_URI:$IMAGE_TAG > helloworld.json
+#      - printf 'Welcome to ACS Solutions'
+  #    - cat imagedefinitions.json
+      - cat helloworld.json
 artifacts:
   files:
    - imagedefinitions.json
