--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,14 +24,10 @@ phases:
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
-      #- printf '[{"name":"order-service","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
-      - printf 'Welcome to ACS Solutions' $REPOSITORY_URI:$IMAGE_TAG > helloworld.json
-#      - printf 'Welcome to ACS Solutions'
-  #    - cat imagedefinitions.json
-      - cat helloworld.json
+      - printf '[{"name":"order-service","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - cat imagedefinitions.json
 artifacts:
   files:
-#   - imagedefinitions.json
-   - helloworld.json
+   - imagedefinitions.json
    - target/order-service.jar
 
